--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,22 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+alabaster==0.7.10         # via sphinx
+babel==2.5.3              # via sphinx
+certifi==2018.1.18        # via requests
+chardet==3.0.4            # via requests
+docutils==0.14            # via sphinx
+idna==2.6                 # via requests
+imagesize==0.7.1          # via sphinx
+jinja2==2.10              # via sphinx
 libvirt-python==3.10.0
+markupsafe==1.0           # via jinja2
+pygments==2.2.0           # via sphinx
+pytz==2017.3              # via babel
+requests==2.18.4          # via sphinx
+six==1.11.0               # via sphinx
+snowballstemmer==1.2.1    # via sphinx
+sphinx-rtd-theme==0.2.4
+sphinx==1.6.6
+sphinxcontrib-websupport==1.0.1  # via sphinx
+urllib3==1.22             # via requests
