--- a/requirements.doc.txt
+++ b/requirements.doc.txt
@@ -4,21 +4,23 @@
 #
 #    pip-compile --output-file requirements.doc.txt requirements.doc.in
 #
-alabaster==0.7.10         # via sphinx
-babel==2.5.3              # via sphinx
-certifi==2018.1.18        # via requests
+alabaster==0.7.11         # via sphinx
+babel==2.6.0              # via sphinx
+certifi==2018.4.16        # via requests
 chardet==3.0.4            # via requests
 docutils==0.14            # via sphinx
-idna==2.6                 # via requests
-imagesize==0.7.1          # via sphinx
+idna==2.7                 # via requests
+imagesize==1.0.0          # via sphinx
 jinja2==2.10              # via sphinx
 markupsafe==1.0           # via jinja2
+packaging==17.1           # via sphinx
 pygments==2.2.0           # via sphinx
-pytz==2017.3              # via babel
-requests==2.18.4          # via sphinx
-six==1.11.0               # via sphinx
+pyparsing==2.2.0          # via packaging
+pytz==2018.5              # via babel
+requests==2.19.1          # via sphinx
+six==1.11.0               # via packaging, sphinx
 snowballstemmer==1.2.1    # via sphinx
-sphinx-rtd-theme==0.2.4
-sphinx==1.6.6
-sphinxcontrib-websupport==1.0.1  # via sphinx
-urllib3==1.22             # via requests
+sphinx-rtd-theme==0.4.0
+sphinx==1.7.6
+sphinxcontrib-websupport==1.1.0  # via sphinx
+urllib3==1.23             # via requests
